﻿TODO Still to add: g5109b, lostv10, rokv100

Mar 15, 2013
	- Moved "Incoming connection from IP:PORT" message from ClientThread to ServerThread (which means it will be triggered sooner, so much less
	  likely to report the useless "Incoming connection from :0"

Feb 25, 2013
    - Added ASCII version of all ANSI files.  Also updated the way the DisplayFile* menu commands work, so you can pass a filename with no
	  extension and then GameSrv will pick the best extension based on the user's terminal type.

Feb 24, 2013
	- Upgraded Usurper to latest version (0.23b).  This version ships with binaries for both DOS and Win32, so you
	  can remove your old Usurper32 directory after updating the this version.
	  A fresh install is recommended, but if you want to you should be able to upgrade the old Usurper game by
	  overwriting the contents of the old directory with the new directory.
	  Unfortunately the old Usurper32 version is not compatible with 0.23b, so your only option is to delete the Usurper32
	  directory and have players start fresh with the new 0.23b version.

Feb 19, 2013
	- Fixed Crt unit in RMLib to be thread safe, so write lock no longer necessary in GameSrvConsole

Feb 17, 2013
	- Implemented terminal type detection (rip, ansi, ascii), thanks to Synchronet for the very thorough logic

Feb 13, 2013
	- Implemented a RichTextBox extension for handling colour highlighting of certain rows -- hopefully this will fix
	  the problem where some rows aren't coloured as they should be.

Feb 7, 2013
	- Added File menu to GSConfig (which only has an Exit option for now)
	- Fixed GameSrvGUI so that if you hit CTRL-C to copy some text from the status window, then GSConfig won't load as well

Feb 1, 2013
    - Started work on a configuration program
	- Removed RLoginMode configuration variable.  It is now assumed to be classic mode unless otherwise specified by the incoming connection.